added raw addiom and atlas elite creative tab

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.atlaselite.addiom_ingot": "Addiom Ingot"
+  "item.atlaselite.addiom_ingot": "Addiom Ingot",
+  "item.atlaselite.raw_addiom": "Raw Addiom",
+
+  "itemgroup.addiom_ingot": "Atlas Elite"
 }
