added addiom block

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.atlaselite.addiom_ingot": "Addiom Ingot",
   "item.atlaselite.raw_addiom": "Raw Addiom",
 
+  "block.atlaselite.addiom_block": "Block Of Addiom",
+
   "itemgroup.addiom_ingot": "Atlas Elite"
 }
