added addium ore block (doesnt gen yet)

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.atlaselite.raw_addium": "Raw Addium",
 
   "block.atlaselite.addium_block": "Block Of Addium",
+  "block.atlaselite.addium_ore": "Addium Ore",
 
   "itemgroup.addium_ingot": "Atlas Elite"
 }
