added raw addium block and loot tables

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "block.atlaselite.addium_block": "Block Of Addium",
   "block.atlaselite.addium_ore": "Addium Ore",
+  "block.atlaselite.raw_addium_block": "Raw Addium",
 
   "itemgroup.addium_ingot": "Atlas Elite"
 }
