added addium silk item

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.atlaselite.addium_axe": "Addium Axe",
   "item.atlaselite.addium_shovel": "Addium Shovel",
   "item.atlaselite.addium_hoe": "Addium Hoe",
+  "item.atlaselite.addium_silk": "Addium Silk",
 
   "block.atlaselite.addium_block": "Block Of Addium",
   "block.atlaselite.addium_ore": "Addium Ore",
