added addium stairs,slab,wall

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -11,6 +11,9 @@
   "block.atlaselite.addium_block": "Block Of Addium",
   "block.atlaselite.addium_ore": "Addium Ore",
   "block.atlaselite.raw_addium_block": "Block Of Raw Addium",
+  "block.atlaselite.addium_wall": "Addium Wall",
+  "block.atlaselite.addium_stairs": "Addium Stairs",
+  "block.atlaselite.addium_slab": "Addium Slab",
   "item.atlaselite.addium_ingot_helmet": "Addium Helmet",
   "item.atlaselite.addium_ingot_chestplate": "Addium Chestplate",
   "item.atlaselite.addium_ingot_leggings": "Addium Leggings",
