added addium stained glass

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.atlaselite.addium_silk": "Addium Silk",
 
   "block.atlaselite.addium_block": "Block Of Addium",
+  "block.atlaselite.addium_stained_glass": "Addium Stained Glass",
   "block.atlaselite.weak_addium_block": "Block Of Weak Addium",
   "block.atlaselite.addium_ore": "Addium Ore",
   "block.atlaselite.raw_addium_block": "Block Of Raw Addium",
