added plated addium

--- a/src/main/resources/assets/atlaselite/lang/en_us.json
+++ b/src/main/resources/assets/atlaselite/lang/en_us.json
@@ -11,6 +11,7 @@
 
   "block.atlaselite.addium_block": "Block Of Addium",
   "block.atlaselite.addium_stained_glass": "Addium Stained Glass",
+  "block.atlaselite.plated_addium": "Plated Addium",
   "block.atlaselite.weak_addium_block": "Block Of Weak Addium",
   "block.atlaselite.addium_ore": "Addium Ore",
   "block.atlaselite.raw_addium_block": "Block Of Raw Addium",
